# cship

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  cship.toml  install.ps1  install.sh
.github/workflows/: ci.yml  claude-code-review.yml  docs.yml  release.yml
docs/: .gitignore  configuration.md  contributing.md  faq.md  index.md  package-lock.json  package.json  passthrough.md  showcase.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: HomeLayout.vue  index.js
docs/examples/: sample-starship.toml
docs/public/: CNAME
src/: cache.rs  config.rs  context.rs  explain.rs  format.rs  lib.rs  main.rs  passthrough.rs  platform.rs  sample_context.json  uninstall.rs  usage_limits.rs
src/modules/: context_bar.rs  context_window.rs  cost.rs  mod.rs  peak_usage.rs  session.rs  usage_limits.rs
tests/: cli.rs
tests/fixtures/: sample_input_full.json  sample_input_minimal.json  sample_input_rate_limits.json  usage_limits_stdin.toml
